--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # URL de l'API backend déployée sur Render
 # Remplacer par votre vraie URL Render après déploiement
-VITE_API_URL=https://medflow-backend.onrender.com
+VITE_API_URL=https://medflow-backend-xd2i.onrender.com
