feat: Add .env.production with VITE_API_URL for Vercel deployment

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -25,4 +25,4 @@ dist-ssr
 
 # Production environment files (contains secrets)
 backend/.env.production
-frontend/.env.production
+# frontend/.env.production - Commenté car VITE_API_URL n'est pas un secret
